--- a/src/health/meals/containers/meals/meals.component.html
+++ b/src/health/meals/containers/meals/meals.component.html
@@ -11,12 +11,12 @@
       <img src="/img/face.svg" alt="face icon" />
       No meals, add a new meal to start
     </div>
-    <!-- Meals ngfor -->
+    <list-item *ngFor="let meal of meals" [item]="meal"></list-item>
   </div>
   <ng-template #loading>
     <div class="message">
       <img src="/img/loading.svg" alt="loading icon" />
       Fetching meals...
     </div>
-  </ng-template>  
+  </ng-template>
 </div>
